syntax = "proto3";

package user;

// User Service Definition
service UserService {
  rpc GetUserById (GetUserRequest) returns (UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
}

// Get User Request
message GetUserRequest {
  string id = 1;
}

// Update User Request
message UpdateUserRequest {
  string id = 1;
  optional string name = 2;
  optional string phone = 3;
  optional string address = 4;
}

// Delete User Request
message DeleteUserRequest {
  string id = 1;
}

// Delete User Response
message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

// List Users Request
message ListUsersRequest {
  int32 page = 1;
  int32 limit = 2;
  optional string search = 3;
}

// User Message
message User {
  string id = 1;
  string email = 2;
  string name = 3;
  string role = 4;
  optional string phone = 5;
  optional string address = 6;
  string createdAt = 7;
  string updatedAt = 8;
}

// User Response
message UserResponse {
  User user = 1;
}

// List Users Response
message ListUsersResponse {
  repeated User users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}
